--- a/APP/index.html
+++ b/APP/index.html
@@ -7,7 +7,7 @@
     <link rel="manifest" href="/manifest.json" />
     <meta name="theme-color" content="#2563eb" />
     <link href="/src/style.css" rel="stylesheet" />
-    <title>Vite + React</title>
+    <title>BobinaVisor</title>
   </head>
   <body>
     <div id="root"></div>
