--- a/APP/index.html
+++ b/APP/index.html
@@ -18,7 +18,7 @@
     <meta name="theme-color" content="#2563eb" />
     <link rel="icon" type="image/png" href="public/favicon.ico" />
     <link href="/src/style.css" rel="stylesheet" />
-    <title>"BobinaVisor"</title>
+    <title>BobinaVisor</title>
   </head>
   <body>
     <div id="root"></div>
