--- a/APP/index.html
+++ b/APP/index.html
@@ -13,11 +13,13 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
     <meta name="apple-mobile-web-app-title" content="BobinaVisor" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
-    <link rel="apple-touch-icon" href="public/apple-touch-icon-180x180.png" />
-    <link rel="manifest" href="/manifest.json" />
+    <link
+      rel="apple-touch-icon"
+      href="%BASE_URL%apple-touch-icon-180x180.png"
+    />
+    <!-- manifest will be injected by VitePWA -->
     <meta name="theme-color" content="#2563eb" />
-    <link rel="icon" type="image/png" href="public/favicon.ico" />
-    <link href="/src/style.css" rel="stylesheet" />
+    <link rel="icon" type="image/png" href="%BASE_URL%favicon.ico" />
     <title>BobinaVisor</title>
   </head>
   <body>
